fix(password-input): adds padding to avoid overlapping hide/show badge (#2113)

--- a/src/components/PasswordInput/PasswordInput.scss
+++ b/src/components/PasswordInput/PasswordInput.scss
@@ -3,6 +3,10 @@
 .PasswordInput {
   position: relative;
 
+  &__editor {
+    padding-right: 5rem;
+  }
+
   &__password-action {
     position: absolute;
     top: space(2);
